# haproxy-modsecurity-bridge

./: Cargo.toml  Dockerfile  README.md  haproxy.cfg  haproxy.lua
.github/workflows/: ci.yml
resource/: rules.conf
src/: lib.rs  modsecurity_filter.rs
