[package]
name = "haproxy-modsecurity"
version = "0.1.0"
edition = "2021"
authors = ["Quang Luong <rust-maintainer@okd.pw>"]
description = "Use the native libmodsecurity from HAProxy Lua API"
license = "MIT OR Apache-2.0"
keywords = ["haproxy", "waf", "cybersecurity"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["lua54"]
lua54 = ["haproxy-api/lua54"]
lua53 = ["haproxy-api/lua53"]

[dependencies]
anyhow = "1.0.79"
glob = "0.3.1"
haproxy-api = "0.7"
jsonwebtoken = "9.2"
mlua = { version = "0.9.2", features = ["macros", "serialize"] }
modsecurity-rs = "0.1.0"
once_cell = "1.19"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
